# libsgfcplusplus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTICE  README.md  index.md
doc/: Build.md  CMakeLists.txt  ChangeLog.md  CodingGuidelines.md  Principles.md  ProjectNotes.md  ReleaseSteps.md  SgfNotes.md  SgfcNotes.md  SgfcPatches.md  SourcesList.cmake  WhyAnotherLibrary.md  group-definitions.dox
example/: CMakeLists.txt  SourcesList.cmake  main.cpp
src/: CMakeLists.txt  Config.cmake.in  ISgfcColorPropertyValue.cpp  ISgfcCommandLine.cpp  ISgfcComposedPropertyValue.cpp  ISgfcDocument.cpp  ISgfcDocumentReadResult.cpp  ISgfcDocumentReader.cpp  ISgfcDoublePropertyValue.cpp  ISgfcGame.cpp  ISgfcMessage.cpp  ISgfcMovePropertyValue.cpp  ISgfcNode.cpp  ISgfcNumberPropertyValue.cpp  ISgfcPointPropertyValue.cpp  ISgfcProperty.cpp  ISgfcPropertyValue.cpp  ISgfcPropertyValueTypeDescriptor.cpp  ISgfcPropertyValueTypeDescriptor.h  ISgfcRealPropertyValue.cpp  ISgfcSimpleTextPropertyValue.cpp  ISgfcSinglePropertyValue.cpp  ISgfcStonePropertyValue.cpp  ISgfcTextPropertyValue.cpp  MasterHeaderFile.h.in  SgfcBackendController.cpp  SgfcBackendController.h  SgfcBackendDataWrapper.cpp  SgfcBackendDataWrapper.h  SgfcBackendLoadResult.cpp  SgfcBackendLoadResult.h  SgfcBackendSaveResult.cpp  SgfcBackendSaveResult.h  SgfcColorPropertyValue.cpp  SgfcColorPropertyValue.h  SgfcCommandLine.cpp  SgfcCommandLine.h  SgfcComposedPropertyValue.cpp  SgfcComposedPropertyValue.h  SgfcConstants.cpp  (+55 more)
src/document/: SgfcComposedPropertyValue.cpp  SgfcComposedPropertyValue.h  SgfcDocument.cpp  SgfcDocument.h  SgfcGame.cpp  SgfcGame.h  SgfcNode.cpp  SgfcNode.h  SgfcNodeIterator.cpp  SgfcNodeIterator.h  SgfcNodeTraits.cpp  SgfcProperty.cpp  SgfcProperty.h  SgfcPropertyMetaInfo.cpp  SgfcPropertyMetaInfo.h  SgfcPropertyTraits.cpp  SgfcSinglePropertyValue.cpp  SgfcSinglePropertyValue.h  SgfcTreeBuilder.cpp  SgfcTreeBuilder.h
src/document/typedproperty/: SgfcBoardSizeProperty.cpp  SgfcBoardSizeProperty.h  SgfcGameTypeProperty.cpp  SgfcGameTypeProperty.h
src/document/typedpropertyvalue/: SgfcColorPropertyValue.cpp  SgfcColorPropertyValue.h  SgfcDoublePropertyValue.cpp  SgfcDoublePropertyValue.h  SgfcMovePropertyValue.cpp  SgfcMovePropertyValue.h  SgfcNumberPropertyValue.cpp  SgfcNumberPropertyValue.h  SgfcPointPropertyValue.cpp  SgfcPointPropertyValue.h  SgfcRealPropertyValue.cpp  SgfcRealPropertyValue.h  SgfcSimpleTextPropertyValue.cpp  SgfcSimpleTextPropertyValue.h  SgfcStonePropertyValue.cpp  SgfcStonePropertyValue.h  SgfcTextPropertyValue.cpp  SgfcTextPropertyValue.h  SgfcUnknownPropertyValue.cpp  SgfcUnknownPropertyValue.h
src/factory/: SgfcPlusPlusFactory.cpp  SgfcPropertyFactory.cpp  SgfcPropertyFactory.h  SgfcPropertyValueFactory.cpp  SgfcPropertyValueFactory.h
src/game/: SgfcBoardSize.cpp  SgfcDate.cpp  SgfcGameInfo.cpp  SgfcGameInfo.h  SgfcGameResult.cpp  SgfcGameUtility.cpp  SgfcGameUtility.h  SgfcRoundInformation.cpp
src/game/go/: SgfcGoGameInfo.cpp  SgfcGoGameInfo.h  SgfcGoMove.cpp  SgfcGoMove.h  SgfcGoPlayerRank.cpp  SgfcGoPoint.cpp  SgfcGoPoint.h  SgfcGoRuleset.cpp  SgfcGoStone.cpp  SgfcGoStone.h
src/interface/internal/: ISgfcPropertyValueTypeDescriptor.cpp  ISgfcPropertyValueTypeDescriptor.h  SgfcMessagePart.h  SgfcPropertyValueTypeDescriptorType.h
src/interface/public/: ISgfcArgument.cpp  ISgfcArguments.cpp  ISgfcBoardSizeProperty.cpp  ISgfcColorPropertyValue.cpp  ISgfcCommandLine.cpp  ISgfcComposedPropertyValue.cpp  ISgfcDocument.cpp  ISgfcDocumentReadResult.cpp  ISgfcDocumentReader.cpp  ISgfcDocumentWriteResult.cpp  ISgfcDocumentWriter.cpp  ISgfcDoublePropertyValue.cpp  ISgfcGame.cpp  ISgfcGameInfo.cpp  ISgfcGameTypeProperty.cpp  ISgfcGoGameInfo.cpp  ISgfcGoMove.cpp  ISgfcGoMovePropertyValue.cpp  ISgfcGoPoint.cpp  ISgfcGoPointPropertyValue.cpp  ISgfcGoStone.cpp  ISgfcGoStonePropertyValue.cpp  ISgfcMessage.cpp  ISgfcMovePropertyValue.cpp  ISgfcNode.cpp  ISgfcNumberPropertyValue.cpp  ISgfcPointPropertyValue.cpp  ISgfcProperty.cpp  ISgfcPropertyFactory.cpp  ISgfcPropertyValue.cpp  ISgfcPropertyValueFactory.cpp  ISgfcRealPropertyValue.cpp  ISgfcSgfContent.cpp  ISgfcSimpleTextPropertyValue.cpp  ISgfcSinglePropertyValue.cpp  ISgfcStonePropertyValue.cpp  ISgfcTextPropertyValue.cpp  ISgfcTreeBuilder.cpp
src/parsing/: SgfcDocumentEncoder.cpp  SgfcDocumentEncoder.h  SgfcPropertyDecoder.cpp  SgfcPropertyDecoder.h  SgfcPropertyValueTypeDescriptorConstants.cpp  SgfcPropertyValueTypeDescriptorConstants.h  SgfcSinglePropertyValueContext.h  SgfcValueConverter.cpp  SgfcValueConverter.h
src/parsing/propertyvaluetypedescriptor/: SgfcPropertyBasicValueTypeDescriptor.cpp  SgfcPropertyBasicValueTypeDescriptor.h  (+8 more)
src/sgfc/backend/: SgfcOptions.h  (+11 more)
test/: AssertHelperFunctions.cpp  AssertHelperFunctions.h  CMakeLists.txt  SetupHelperFunctions.cpp  SetupHelperFunctions.h  SgfcBackendControllerTest.cpp  SgfcBackendDataWrapperTest.cpp  SgfcMessageParserTest.cpp  SgfcMessageStreamTest.cpp  SgfcMessageTest.cpp  SgfcSaveStreamTest.cpp  SgfcSgfContentTest.cpp  SourcesList.cmake  TestDataGenerator.cpp  TestDataGenerator.h  main.cpp
test/document/: SgfcDocumentTest.cpp  SgfcGameTest.cpp  SgfcNodeTest.cpp  SgfcNodeTraitsTest.cpp  SgfcTreeBuilderTest.cpp
test/game/: SgfcDateTest.cpp  SgfcGameResultTest.cpp  SgfcRoundInformationTest.cpp
test/parsing/: SgfcPropertyDecoderTest.cpp  SgfcValueConverterTest.cpp
test/test-files/: compressed-point-list.sgf  deep-game-tree.sgf  encoding-chinese-gb18030.sgf  encoding-chinese-gbk.sgf  encoding-cyrillic-windows.sgf  encoding-japanese-iso2022jp.sgf  encoding-japanese-macos.sgf  encoding-japanese-shiftjis.sgf  encoding-korean-macos.sgf  encoding-simplifiedchinese-gb2312.sgf  encoding-simplifiedchinese-macos.sgf  encoding-traditionalchinese-big5.sgf  encoding-traditionalchinese-macos.sgf  encoding-utf16-nobom.sgf  encoding-utf16-withbom.sgf  encoding-utf8-nobom.sgf  encoding-utf8-withbom.sgf  encoding-western-isolatin1.sgf  encoding-western-isolatin9.sgf  encoding-western-macosroman.sgf  encoding-western-windowslatin1.sgf  escaping-output.txt  escaping.sgf  gameinfo.sgf
(+722 files in other folders)
